preparation of serialization of daily humors for the historic in the BroadCastReceiver of the AlarmManager

--- a/app/src/main/res/layout/activity_historic.xml
+++ b/app/src/main/res/layout/activity_historic.xml
@@ -5,6 +5,6 @@
     android:background="@color/historicBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".controller.HistoricActivity">
+    tools:context=".historic.HistoricActivity">
 
 </android.support.constraint.ConstraintLayout>
