--- a/app/src/main/res/layout/activity_historic.xml
+++ b/app/src/main/res/layout/activity_historic.xml
@@ -5,6 +5,6 @@
     android:background="@color/historicBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".historic.HistoricActivity">
+    tools:context=".activities.HistoricActivity">
 
 </android.support.constraint.ConstraintLayout>
