--- a/app/src/main/res/layout/activity_historic.xml
+++ b/app/src/main/res/layout/activity_historic.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:background="@color/historicBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/activity_historic_layout"
+    android:weightSum="100"
     tools:context=".activities.HistoricActivity">
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
