--- a/app/src/main/res/layout/activity_historic.xml
+++ b/app/src/main/res/layout/activity_historic.xml
@@ -7,6 +7,6 @@
     android:layout_height="match_parent"
     android:id="@+id/activity_historic_layout"
     android:weightSum="100"
-    tools:context=".activities.HistoricActivity">
+    tools:context=".controllers.HistoricActivity">
 
 </LinearLayout>
