--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -7,6 +7,6 @@
     android:orientation="vertical"
     android:background="#282828"
     android:id="@+id/statistics_activity_layout"
-    tools:context=".StatisticsActivity">
+    tools:context=".controllers.StatisticsActivity">
 
 </LinearLayout>
