--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="historic_text_size">16sp</dimen>
     <dimen name="statistics_reset_button">16sp</dimen>
+    <dimen name="historyCmtBtn">18dp</dimen>
 </resources>
