--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="historic_text_size">18sp</dimen>
-    <dimen name="statistics_reset_button">18sp</dimen>
+    <dimen name="historic_text_size">16sp</dimen>
+    <dimen name="statistics_reset_button">16sp</dimen>
+    <dimen name="historyCmtBtn">19dp</dimen>
 </resources>
