--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -1,4 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="historic_text_size">20sp</dimen>
-    <dimen name="statistics_reset_button">20sp</dimen>
+    <dimen name="historic_text_size">38sp</dimen>
+    <dimen name="statistics_reset_button">18sp</dimen>
+    <dimen name="historyCmtBtn">21dp</dimen>
 </resources>
