fixed statistics reset bug

--- a/app/src/main/res/values-en/arrays.xml
+++ b/app/src/main/res/values-en/arrays.xml
@@ -13,7 +13,7 @@
     <string-array name="notifications">
         <item>Doing excercice will make you feel better in your body and a better mood.</item>
         <item>Take some time for you. Doing activities we like drop down the stress</item>
-        <item>A little outdoors trio ? Nature is source of appeasement</item>
+        <item>A little outdoors trip ? Nature is source of appeasement</item>
         <item >The daily practice of meditation is an efficient key to refocus, perceive the world
         differently, rise your concentration, handling of your emotions and way more virtues !</item>
         <item>Try to experiment new things, the routine is source of stress, boredom and depression.</item>
